[package]
name = "html2md"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.23", features = ["blocking"] }
html2md = "0.2.15"
url = "2.5.7"
structopt = "0.3.26"
#[structopt(name = "html2md")]
