[package]
name = "htt-prs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "3.0.0"
anyhow = "1.0.100"
jsonxf = "1.1.1"
mime = "0.3.17"
once_cell = "1.21.3"
clap = { version = "4.5.48", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["json"] }
syntect = { version = "5.0", features = ["default"] }
tokio = { version = "1.32.0", features = ["full"] }
